--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ task pushDockerImage() {
         exec {
             commandLine(
                     "docker", "buildx", "build",
-                    "--platform", "linux/amd64,linux/arm64,linux/arm/v7",
+                    "--platform", "linux/amd64,linux/arm64",
                     "--rm",
                     "-f", project.file("${runtimeDockerDirectory.getAbsolutePath()}/Dockerfile"),
                     "-t", imageWithTag,
